Fixed carousel sliding issues, spacing issues and upgraded some packages.

--- a/src/themes/default/components/Text/_text.scss
+++ b/src/themes/default/components/Text/_text.scss
@@ -46,7 +46,7 @@
     }
 
     &.title {
-        font-size: $font-small;
+        font-size: $title-font;
         font-weight: 600;
         padding: 0;
         margin: 0;
